<resources>
    <string name="app_name">LearnApp</string>
    <string name="ok" translatable="false">OK</string>
    <string name="hello_txt">Hello!</string>
    <string name="user_photo" translatable="false">user_photo</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="login" translatable="false">Login</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="password" translatable="false">Password</string>
    <string name="name" translatable="false">Name</string>
    <string name="surname" translatable="false">Surname</string>
    <string name="patron" translatable="false">Patronymic name</string>
    <string name="done" translatable="false">Done</string>

</resources>